--- a/grid-template-init-project/assets/css/style.css
+++ b/grid-template-init-project/assets/css/style.css
@@ -485,6 +485,8 @@ h2{
     font-family: "Roboto Slab", sans-serif;
     line-height: 1.2em;
     color: #2d3651;
+    font-size: 2.5rem;
+    
 }
 
 h3{
@@ -796,6 +798,46 @@ a{
     transition: color 0.5s;
 }
 
+.about{
+    background-color:#E5E5E5;
+}
+
+.about .container{
+    display: flex;
+}
+
+.about p{
+    font-size: 1.125rem;
+    letter-spacing: 0.06em;
+}
+
+.about-text{
+    position: relative;
+}
+
+.about-text::after{
+    position: absolute;
+    width: 2px;
+    height: 200px;
+    content: "";
+    background-color: rgba(99, 117, 136, 0.1);
+}
+
+.about-img{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    margin-left: 7.5%;
+    margin-top: 4%;
+    min-width: 271px;
+}
+
+.about-img img{
+    max-width: 100%;
+    max-height: 488px;
+}
+
+
 @media (min-width: 993px){
     .skills{
       grid-template-columns: repeat(4, 1fr);
@@ -805,9 +847,32 @@ a{
           "a7 a8 a9 a6"
           "bs bs bs bs";
     }
+
+    .about .container{
+        padding-top: 70px;
+        padding-bottom: 106px;
+    }
+
+    .about h2{
+        margin-bottom: 50px;
+    }
+
+    .about-text::after{
+        right: -50px;
+        top: 183px;
+    }
+
+    .about-img{
+        width: 271px;
+    }
+
+    .about-img img{
+        max-width: 100%;
+        max-height: 488px;
+    }
 }
   
-@media (max-width: 992px){
+@media (max-width: 992px) and (min-width: 769px) {
     .skills{
       grid-template-columns: repeat(3, 1fr);
       grid-template-areas:
@@ -831,9 +896,34 @@ a{
         padding: 14px 20px;
         font-size: 1rem;
     }
+
+    h2 {
+        font-size: 2rem;
+    }
+
+    .about .container{
+        padding-top: 54px;
+        padding-bottom: 78px;
+    }
+
+    .about h2{
+        margin-bottom: 40px;
+    }
+
+    .about p{
+        letter-spacing: 1px;
+        font-size: 16px;
+        line-height: 1.15em;
+    }
+
+    .about-text::after{
+        right: -30px;
+        top: 145px;
+    }
+    
 }
 
-@media (max-width: 768px){
+@media (max-width: 768px) and (min-width: 577px) {
     .skills{
         grid-template-columns: repeat(2, 1fr);
         grid-template-areas:
@@ -874,6 +964,34 @@ a{
         padding: 10px 20px;
         letter-spacing: 0.05em;
     }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    .about .container{
+        padding-top: 43px;
+        padding-bottom: 40px;
+    }
+
+    .about h2{
+        margin-bottom: 28px;
+    }
+
+    .about p{
+        letter-spacing: 1px;
+        font-size: 16px;
+        line-height: 1.15em;
+    }
+
+    .about-text::after{
+        right: -20px;
+        top: 105px;
+    }
+
+    .about-img{
+        min-width: 236px;
+    }
 }
 
 @media (max-width: 576px){
@@ -906,7 +1024,33 @@ a{
         width: 100%;
         margin: 0;
     }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    .about .container{
+        flex-wrap: wrap;
+        padding-top: 43px;
+        padding-bottom: 40px;
+    }
+
+    .about h2{
+        margin-bottom: 28px;
+        text-align: center;
+    }
+
+    .about p{
+        letter-spacing: 1px;
+        font-size: 16px;
+        line-height: 1.15em;
+    }
+
+    .about-text::after{
+        display: none;
+    }
+
+    .about-img{
+        margin-left: 24%;
+    }
 }
-
-
-
