--- a/grid-template-init-project/assets/css/style.css
+++ b/grid-template-init-project/assets/css/style.css
@@ -902,6 +902,94 @@ form input{
     background-color: #d66926;
 }
 
+.post:nth-of-type(1){
+    grid-area: p1;
+}
+
+.post:nth-of-type(2){
+    grid-area: p2;
+}
+
+.post:nth-of-type(3){
+    grid-area: p3;
+}
+
+.post:nth-of-type(4){
+    grid-area: p4;
+}
+
+.post:nth-of-type(5){
+    grid-area: p5;
+}
+
+.post:nth-of-type(6){
+    grid-area: p6;
+}
+
+.post-btn{
+    grid-area: p7;
+    display: flex;
+    justify-content: center;
+}
+
+.post-caption{
+    display: grid;
+    align-content: center;
+    padding: 20px;
+}
+
+.post-link{
+    display: grid;
+    height: 100%;
+    grid-template-rows: 300px 1fr;
+    background-color: #F2F2F2;
+    transition: 0.5s;
+}
+
+.post-link:hover {
+    background-color: #d8d8d8;
+}
+
+.post-link:hover .post-image__picture{
+    transform: scale(1.1);
+}
+
+.post-link:hover .post-title{
+    color: #2d3651;
+}
+
+.post-link:hover .post-text{
+    color: #2d3651;
+}
+
+.post-image{
+    position: relative;
+    overflow: hidden;
+}
+
+.post-image__picture{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-position: 50% 50%;
+    background-color: #2d3651;
+    background-size: cover;
+    transition: 0.5s;
+}
+
+.post-title{
+    text-align: center;
+    transition: 0.5s;
+}
+
+.post-text{
+    color: #637588;
+    text-align: center;
+    transition: 0.5s;
+}
+
 
 @media (min-width: 993px){
     .skills{
@@ -923,7 +1011,7 @@ form input{
     }
 
     .about-text::after{
-        right: 50px;
+        right: -50px;
         top: 183px;
     }
 
@@ -941,6 +1029,29 @@ form input{
         grid-template-columns: repeat(3, 1fr);
         grid-template-areas:
             "f1 f2 f3";
+    }
+
+    .posts-main{
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-areas:
+            "p1 p1 p2 p3"
+            "p4 p5 p6 p6"
+            "p7 p7 p7 p7";
+    }
+
+    .btn-accent{
+        min-width: 350px;
+    }
+
+    .post-btn{
+        margin-bottom: 100px;
+    }
+
+    .posts h2{
+        margin-top: 100px;
+        margin-bottom: 56px;
     }
 }
   
@@ -998,6 +1109,30 @@ form input{
         grid-template-columns: repeat(3, 1fr);
         grid-template-areas:
             "f1 f2 f3";
+    }
+
+    .posts-main{
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-areas:
+            "p1 p1 p2"
+            "p3 p4 p4"
+            "p5 p5 p6"
+            "p7 p7 p7";
+    }
+
+    .btn-accent{
+        min-width: 350px;
+    }
+
+    .post-btn{
+        margin-bottom: 80px;
+    }
+
+    .posts h2{
+        margin-top: 80px;
+        margin-bottom: 43px;
     }
     
 }
@@ -1088,6 +1223,30 @@ form input{
     .form-name{
         margin-bottom: 0;
     }
+
+    .posts-main{
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:
+            "p1 p2"
+            "p3 p4"
+            "p5 p6"
+            "p7 p7";
+    }
+
+    .btn-accent{
+        min-width: 350px;
+    }
+
+    .post-btn{
+        margin-bottom: 60px;
+    }
+
+    .posts h2{
+        margin-top: 60px;
+        margin-bottom: 35px;
+    }
 }
 
 @media (max-width: 576px){
@@ -1170,5 +1329,29 @@ form input{
 
     .form-submit{
         margin-top: 0;
+    }
+
+    .posts-main{
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-areas:
+            "p1"
+            "p2"
+            "p3"
+            "p4"
+            "p5"
+            "p6"
+            "p7";
+    }
+
+    .post-btn{
+        margin-bottom: 60px;
+    }
+
+    .posts h2{
+        text-align: center;
+        margin-top: 60px;
+        margin-bottom: 35px;
     }
 }
